--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(../images/shovel-knight.png);
 }
 
 #root {
